<?xml version="1.0"?>
<package format="2">
  <name>chargepal_pybullet</name>
  <version>0.0.0</version>
  <description>
    The chargepal_pybullet package.
    Includes a PyBullet Simulation using the OpenAI gym interface.
  </description>

  <maintainer email="georg.john@dfki.de">Georg John</maintainer>
  <author email="georg.john@dfki.de">Georg John</author>
  
  <license>BSD</license>

  <!-- Should be added if a public repository exists -->
  <!-- <url type="website">http://wiki.ros.org/chargepal_pybullet</url> -->
  
  <!-- dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>

</package>
